<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="5dp"
    tools:ignore="MissingClass">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"

        app:layout_boxedEdges="all">
        <TextView
            android:id="@+id/txtCompanyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/red"
            android:text="@string/company_title" />
        <TextView
            android:id="@+id/txtCompanySubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="8sp"
            android:textColor="@color/blue"
            android:text="@string/company_subtitle" />
        <TextView
            android:id="@+id/txtNotificationDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:text="@string/notification_details" />
        <TextView
            android:id="@+id/txtAttendeesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:text="@string/attendees_title" />
        <TextView
            android:id="@+id/txtAttendees"
            android:textSize="8sp"
            android:gravity="center"
            android:textColor="@color/blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/txtLocationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:text="@string/location_title"
            />
        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="8sp"
            android:textColor="@color/blue"
            />

    </LinearLayout>
</androidx.wear.widget.BoxInsetLayout>